# jitter

./: .gitignore  Cargo.toml  LICENSE.md  README.md  extension_methods.md  ideas.md  purpose.md  test.bat  timeline.md
examples/: extension.rs  test.rs
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
src/: extension.rs  lex.rs  lib.rs  macros.rs  main.rs  parse.rs
src/backend/: codegen.rs  jit.rs  mod.rs  types.rs
src/frontend/: lex.rs  mod.rs  modules.rs
src/frontend/parse/: ast.rs  mod.rs
src/frontend/validate/: context.rs  mod.rs  types.rs
src/parse/: ast.rs  mod.rs
tests/: benchmark.rs  integration_test.jitter  integration_test.lang  lex_test.txt  libtest.jitter  parse_test.jitter  rewrite_test.jitter  test.jitter  test.lang  unit_tests.rs
