[package]
name = "jitter"
version = "0.1.0"
authors = ["swerdloj <swerdloj@andrews.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
benchmark = []

[dependencies]
proc-macros = { path = "proc-macros" }
cranelift = "0.67.0"
cranelift-module = "0.67.0"
cranelift-simplejit = "0.67.0"