[package]
name = "jitter"
version = "0.1.0"
authors = ["swerdloj <swerdloj@andrews.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "extension"
crate-type = ["dylib"]

[features]
benchmark = []

[dependencies]
proc-macros = { path = "proc-macros" }

target-lexicon = "0.11.1"

cranelift           = "0.68.0"
cranelift-module    = "0.68.0"
cranelift-simplejit = "0.68.0"
cranelift-preopt    = "0.68.0"